<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_reservation_accepted_black_24dp"
            android:title="@string/menu_reservation" />

    </group>

    <item android:title="@string/navigation_view_more_options">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:enabled="false"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_config"
                android:enabled="true"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_config" />
            <item
                android:id="@+id/nav_logout"
                android:enabled="false"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
