<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map"
    >

    <fragment
        android:id="@+id/nav_map"
        android:name="com.apptest.nensalparc.ui.home.HomeFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.apptest.nensalparc.ui.myReservation.myReservationFragment"
        android:label="@string/menu_reservation"
        tools:layout="@layout/fragment_my_reservation" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.apptest.nensalparc.ui.tools.ToolsFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_config"
        android:name="com.apptest.nensalparc.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.apptest.nensalparc.ui.send.PlaceActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_send" />
</navigation>